[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bills-sql-lineage"  # For PyPI
version = "0.0.4"
description = "Personal SQL lineage generator."
authors = [{name = "Bilbottom"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arguably>=1.2.5",
    "sqlglot[rs]>=26.12.1",
]

[project.scripts]
lineage = 'sql_lineage.__main__:app'

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "pre-commit>=4.1.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]


[tool.setuptools.packages.find]
include = ["sql_lineage"]


[tool.pytest.ini_options]
addopts = "--cov=sql_lineage --cov-fail-under=80"
testpaths = ["tests"]


[tool.coverage.run]
omit = ["__main__.py"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    #  Use of `assert` detected
    "PLR2004", #  Magic value used in comparison
    "PLR0913", #  Too many arguments in function definition
]
